# loccode

./: .env.swe60.example  .gitignore  1.md  2.md  EXPERIMENT_60_BASELINE_SUMMARY.md  EXPERIMENT_BASELINE_SUMMARY.md  STRICT_EVALUATION_SUMMARY.md  SWEBENCH_MULTIMODAL_FULL_DEV_QWEN8B_SUMMARY.md  SYMPTOM_MECHANISM_GRAPH_DESIGN.md  collect_baseline_result_bundle.sh  run_mimo_60_sequential.sh  run_omnigirl_60_baselines.sh  run_omnigirl_60_baselines_parallel.sh  run_omnigirl_full_baselines.sh  run_omnigirl_full_baselines_parallel.sh  run_omnigirl_unified60_baselines.sh  run_swebench_multimodal_60_baselines.sh  run_swebench_multimodal_60_baselines_parallel.sh  run_swebench_multimodal_full_dev_baselines.sh  run_swebench_multimodal_full_dev_baselines_parallel.sh  server_check_setup_run_omni60.sh  server_check_setup_run_omnigirl_full.sh  server_check_setup_run_omnigirl_full_clean15.sh  server_check_setup_run_swe60.sh  server_check_setup_run_swebench_multimodal_full_dev.sh  setup_baseline_conda_envs.sh
OrcaLoca/: .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  cli.py  pyproject.toml
OrcaLoca/Orcar/: __init__.py  agent.py  code_scorer.py  edit_agent.py  formatter.py  gen_config.py  load_cache_dataset.py  log_utils.py  output_parser.py  prompts.py  search.cfg  search_agent.py  trace_analysis_agent.py  tracer.py  tracer_reranker.py  types.py  utils.py  verify_agent_wrapper.py
OrcaLoca/artifact/: cost.py  evaluate_output.py  figure1.py  insts_stats.py  lite_results_paper.csv  parse_output.py  parse_output_json.py
OrcaLoca/dataset/: create_graph.py  (+3 more)
(+380 files in other folders)
